--- a/note_app_frontend/src/App.css
+++ b/note_app_frontend/src/App.css
@@ -2,6 +2,7 @@
     padding: 0;
     margin: 0;
     overflow-y: hidden;
+    box-sizing: border-box;
 }
 
 
@@ -29,7 +30,7 @@
     /* margin-right: 5px; */
 }
 .side-bar-options-btn:hover{
-    background-color: #1f1f1e;
+    background-color: #404040;
 }
 
 .new-folder-icon,
@@ -77,7 +78,7 @@
     display: none;
 }
 .note-del-btn:hover{
-    background-color: #1f1f1e;
+    background-color: #404040;
 }
 .delete-icon{
     font-size: 0.8rem;
