--- a/note_app_frontend/src/editor.css
+++ b/note_app_frontend/src/editor.css
@@ -22,12 +22,13 @@
     max-height: 82%;
     background-color: #1f1f1e;
     border: none;
-    font-size: 1.5rem;
+    font-size: 1.3rem;
     color: #dbdbda;
     overflow-y: auto;
 
     overflow-x: auto;
     white-space: pre-wrap;
+    caret-color: #dbdbda;
 }
 
 .note-pad-textarea::-webkit-scrollbar {
@@ -54,7 +55,7 @@
     max-height: 82%;
     background-color: #1f1f1e;
     border: none;
-    font-size: 1.5rem;
+    font-size: 1.3rem;
     color: #dbdbda;
 
     overflow-y: auto;
@@ -83,10 +84,8 @@
 
 .note-pad-head {
     display: flex;
-    width: 60%;
+    width: 52%;
     justify-content: space-between;
-    /* border: 2px solid blue; */
-    /* background-color: blueviolet; */
     margin-top: 10px;
     margin-right: 30px;
     align-self: flex-end;
@@ -240,4 +239,37 @@
 
 .new-tab:hover{
     background-color: #404040;
+}
+
+
+
+
+
+.note-pad-viewarea table {
+    border-collapse: collapse;
+}
+
+.note-pad-viewarea th,
+.note-pad-viewarea td {
+    border: 1px solid rgb(255, 255, 255);
+    padding: 8px;
+}
+
+
+
+/* css for open note in tab message */
+
+.new-tab-display{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: #885af3;
+    margin-top: 30px;
+    width: 70%;
+    min-height: 82%;
+    max-height: 82%;
+    background-color: #1f1f1e;
+    border: none;
+    font-size: 1.5rem;
 }
