--- a/note_app_frontend/src/App.css
+++ b/note_app_frontend/src/App.css
@@ -44,6 +44,7 @@
 .logout-icon{
     margin-bottom: 20px;
     color: #9f9e9f;
+    cursor: pointer;
 }
 
 .bookmark-icon {
@@ -97,6 +98,23 @@
     display: flex;
     flex-direction: column;
     height: 100vh;
+    /* overflow-y: auto; */
+}
+.notes-list{
+    overflow-y: auto;
+}
+
+.notes-list::-webkit-scrollbar {
+    width: 5px;
+}
+
+.notes-list::-webkit-scrollbar-thumb {
+    background-color: #333;
+    border-radius: 4px;
+}
+
+.notes-list::-webkit-scrollbar-track {
+    background-color: #1f1f1e;
 }
 
 .side-bar-options {
